[package]
name = "claude-history"
version = "0.1.0"
edition = "2021"
description = "Import, browse, and search your Claude Code session history (JSONL -> SQLite)"

[[bin]]
name = "cch"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
tiny_http = "0.12"
walkdir = "2"

[profile.release]
opt-level = 2
